--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Úvodní stránka</title>
+    <title>Elektroinstalace</title>
 </head>
 <body>
+    <header>
+        <p>Ahoj</p>
+    </header>
+    <nav>
+    </nav>
+
+
+    <footer>
+    </footer>
     
 </body>
 </html>
