--- a/index.html
+++ b/index.html
@@ -6,14 +6,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elektroinstalace</title>
+    <title>Elektroinstalace KÍLHETS</title>
 </head>
 <body>
     <header>
-        <p>Ahoj</p>
+        <img class="logo_foto" src="images/logo.png" alt="Logo stránky">
+        <nav>
+            <ul>
+                <li><a href="#">O nás</a></li>
+                <li><a href="#">Kontakt</a></li>
+                <li><a href="#">Reference</a></li>
+            </ul>
+        </nav>
+
+        <h1 class="logo_text">KÍLHETS </h1>
+
     </header>
-    <nav>
-    </nav>
+
 
 
     <footer>
