--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
 
     <meta charset="UTF-8">
@@ -9,24 +10,34 @@
     <title>Elektroinstalace KÍLHETS</title>
 </head>
 <body>
+
+
     <header>
+    <div class="prouzek"></div>
+    <div>
         <img class="logo_foto" src="images/logo.png" alt="Logo stránky">
-        <nav>
-            <ul>
-                <li><a href="#">O nás</a></li>
-                <li><a href="#">Kontakt</a></li>
-                <li><a href="#">Reference</a></li>
-            </ul>
-        </nav>
-
-        <h1 class="logo_text">KÍLHETS </h1>
-
+    </div>
+    <nav>
+        <div class="navbar">
+        <ul>
+            <li><a href="#">Reference</a></li>
+            <li class="momentalni_stranka"><a href="index.html">DOMOVSKÁ STRÁNKA</a></li>
+            <li><a href="#">Kontakt</a></li>
+        </ul>
+        </div>
+    </nav>
+    <h1 class="logo_text">KÍLHETS </h1>
     </header>
+    <main>
+        <div class="background_foto">
+        </div> 
+    </main>
 
 
 
     <footer>
     </footer>
+
     
 </body>
 </html>
