--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
     <div class="prouzek"></div>
     <div>
-        <img class="logo_foto" src="images/logo.png" alt="Logo stránky">
+        <a href="index.html"><img class="logo_foto" src="images/logo.png" alt="Logo stránky"></a>
     </div>
     <nav>
         <div class="navbar">
@@ -29,13 +29,23 @@
     <h1 class="logo_text">KÍLHETS </h1>
     </header>
     <main>
+    <div class="container">
         <div class="background_foto">
-        </div> 
+            <div class="main_container">
+                <h1>ELEKTROINSTALACE KÍLHETS</h1>
+                <p>Výroba a instalace elektrických zařízení</p>
+                <p>Průmyslové elektroinstalace a elektromontáže</p>
+                <p>Opravy, montáže a servisní činnosti</p>
+                <p>Soukromá elektroinstalace na vašem pozemku</p>
+            </div>
+        </div>
+    </div> 
     </main>
-
-
-
     <footer>
+            <h4>Elektroinstalace KÍLHETS</h4>
+            <p><a href="https://www.google.com/maps/place/St%C5%99edn%C3%AD+pr%C5%AFmyslov%C3%A1+%C5%A1kola+strojn%C3%AD+a+elektrotechnick%C3%A1+a+Vy%C5%A1%C5%A1%C3%AD+odborn%C3%A1+%C5%A1kola/@50.7731651,15.0624547,17z/data=!3m1!4b1!4m5!3m4!1s0x470936a0b62f8e83:0x27e91649b311f9a0!8m2!3d50.7731495!4d15.064665">Masarykova 3, 460 01 Liberec 1</a></p> 
+            <p> IČO: 605011877 </p>
+            <p>@2022, <b>Black Studio Production</b></p>
     </footer>
 
     
