--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
@@ -8,46 +8,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elektroinstalace KÍLHETS</title>
+    <link rel="icon" href="images/title_logo.png" type = "image/x-icon">
 </head>
 <body>
-
-
     <header>
-    <div class="prouzek"></div>
-    <div>
-        <a href="index.html"><img class="logo_foto" src="images/logo.png" alt="Logo stránky"></a>
-    </div>
-    <nav>
-        <div class="navbar">
-        <ul>
-            <li><a href="#">Reference</a></li>
-            <li class="momentalni_stranka"><a href="index.html">DOMOVSKÁ STRÁNKA</a></li>
-            <li><a href="#">Kontakt</a></li>
-        </ul>
-        </div>
-    </nav>
-    <h1 class="logo_text">KÍLHETS </h1>
-    </header>
-    <main>
-    <div class="container">
-        <div class="background_foto">
-            <div class="main_container">
-                <h1>ELEKTROINSTALACE KÍLHETS</h1>
-                <p>Výroba a instalace elektrických zařízení</p>
-                <p>Průmyslové elektroinstalace a elektromontáže</p>
-                <p>Opravy, montáže a servisní činnosti</p>
-                <p>Soukromá elektroinstalace na vašem pozemku</p>
+
+    <div class="header-flex-wrap">
+        <img class="header-logo" src="images/logo.png" alt="Logo stránky">
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">Reference</a></li>
+                <li ><a class="momentalni_stranka" href="index.html">DOMOVSKÁ STRÁNKA</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
+        </nav>
+        <div class="header-text-outline">
+            <div class="header-text-logo">
+                KÍLHETS
             </div>
         </div>
-    </div> 
-    </main>
-    <footer>
-            <h4>Elektroinstalace KÍLHETS</h4>
-            <p><a href="https://www.google.com/maps/place/St%C5%99edn%C3%AD+pr%C5%AFmyslov%C3%A1+%C5%A1kola+strojn%C3%AD+a+elektrotechnick%C3%A1+a+Vy%C5%A1%C5%A1%C3%AD+odborn%C3%A1+%C5%A1kola/@50.7731651,15.0624547,17z/data=!3m1!4b1!4m5!3m4!1s0x470936a0b62f8e83:0x27e91649b311f9a0!8m2!3d50.7731495!4d15.064665">Masarykova 3, 460 01 Liberec 1</a></p> 
-            <p> IČO: 605011877 </p>
-            <p>@2022, <b>Black Studio Production</b></p>
-    </footer>
-
+    </div>
+    <div class="prouzek"></div>
+    </header>
     
 </body>
 </html>
