--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elektroinstalace KÍLHETS</title>
-    <link rel="icon" href="images/title_logo.png" type = "image/x-icon">
+    <link rel="icon" href="images/favicon.png" type = "image/x-icon">
 
     <script src="hamburger.js"></script>
 </head>
@@ -23,9 +23,8 @@
         </a>
 
         <!-- Hamburger -->
-        <div onclick="myFunction()" class="dropdown">
-            <button class="hamburger is-active">
-                <i class="fa fa-bars" aria-hidden="true"></i>
+        <div class="dropdown">
+            <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="index.html">Domovská stránka</a>
