--- a/index.html
+++ b/index.html
@@ -21,26 +21,25 @@
         <a href="index.html">
             <img class="header-logo" src="images/logo.png" alt="Logo stránky">
         </a>
-
-        <!-- Hamburger -->
+        <!-- HAMBURGER -->
         <div class="dropdown">
             <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="index.html">Domovská stránka</a>
+                <a class="momentalni_stranka_ham" href="index.html">Domovská stránka</a>
                 <a href="reference.html">Reference</a>
-                <a href="#kontakt.html">Kontakt</a>
+                <a href="kontakt.html">Kontakt</a>
             </div>
         </div>
-        <!-- Hamburger -->
-
+        <!-- NAVBAR -->
         <nav class="navbar">
             <ul>
-                <li><a href="#">Reference</a></li>
+                <li><a href="reference.html">Reference</a></li>
                 <li ><a class="momentalni_stranka" href="index.html">DOMOVSKÁ STRÁNKA</a></li>
-                <li><a href="#">Kontakt</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
+        <!-- H. TEXT -->
         <div class="header-text-outline">
             <div class="header-text-logo">
                 KÍLHETS
@@ -49,5 +48,45 @@
     </div>
     <div class="prouzek"></div>
     </header>
+    <main>
+        <section class="background">
+            <div class="main-border-wrap">
+                <h1>ELEKTROINSTALACE KÍLHETS</h1>
+                <p>Výroba a instalace elektrických zařízení</p>
+                <p>Průmyslové elektroinstalace a elektromontáže</p>
+                <p>Opravy, montáže a servisní činnosti</p>
+            </div>
+        </section>
+        <section class="content-wrapper">
+            <div class="card-long-flex-wrap">
+                <div class="card card-long">
+                    <h2>Naše služby</h2>
+                    <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
+                    <p><a href="reference.html">Reference</a> našich zákazníků</p>
+                </div>
+            </div>
+            <div class="card-flex-wrap">
+                <div class="card">
+                    <h3>Elektroinstalace zařízení</h3>
+                    <p>Zařídíme pro vás celou elektroinstalaci se vším všudy</p>
+                    <p>Přes výrobu, instalaci až revizi zařízení</p>
+                </div>
+                <div class="card">
+                    <h3>Průmyslová elektromontáž</h3>
+                    <p>Vytvoříme pro vás speciální plán celé elektromontáže</p>
+                    <p>Celou elektromontáž pro vás následně uděláme</p>
+                    <p>Provedeme i následnou revizi celé elektromontáže</p>
+                </div>
+                <div class="card">
+                    <h3>Servisní činnosti</h3>
+                    <p>Naši specialisté pro vás udělají revizi všech vašich zařízení</p>
+                    <p>Zařídíme případnou opravu nebo znovu montáž poškozenývch zařízení</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
