background-cover fixed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
 
     <div class="header-flex-wrap">
+        <!-- HEADER LOGO -->
         <a href="index.html">
             <img class="header-logo" src="images/logo.png" alt="Logo stránky">
         </a>
