folders cleanup, kontakt,reference created

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles_js/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles_js/styles.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -12,7 +12,7 @@
     <title>Elektroinstalace KÍLHETS</title>
     <link rel="icon" href="images/favicon.png" type = "image/x-icon">
 
-    <script src="hamburger.js"></script>
+    <script src="styles_js/hamburger.js"></script>
 </head>
 <body>
     <header>
@@ -36,7 +36,7 @@
         <nav class="navbar">
             <ul>
                 <li><a href="reference.html">Reference</a></li>
-                <li ><a class="momentalni_stranka" href="index.html">DOMOVSKÁ STRÁNKA</a></li>
+                <li><a class="momentalni_stranka" href="index.html">DOMOVSKÁ STRÁNKA</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -83,6 +83,7 @@
                     <p>Naši specialisté pro vás udělají revizi všech vašich zařízení</p>
                     <p>Zařídíme případnou opravu nebo znovu montáž poškozenývch zařízení</p>
                 </div>
+                
             </div>
         </section>
     </main>
