design updated, ref.+ kon. text update

--- a/kontakt.html
+++ b/kontakt.html
@@ -27,17 +27,17 @@
             <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="index.html">Domovská stránka</a>
-                <a href="reference.html">Reference</a>
-                <a class="momentalni_stranka_ham" href="kontakt.html">Kontakt</a>
+                <a href="index.html">SLUŽBY</a>
+                <a href="reference.html">REFERENCE</a>
+                <a class="momentalni_stranka_ham" href="kontakt.html">KONTAKT</a>
             </div>
         </div>
         <!-- NAVBAR -->
         <nav class="navbar">
             <ul>
-                <li><a href="reference.html">Reference</a></li>
-                <li><a href="index.html">DOMOVSKÁ STRÁNKA</a></li>
-                <li><a class="momentalni_stranka" href="kontakt.html">Kontakt</a></li>
+                <li><a href="reference.html">REFERENCE</a></li>
+                <li><a href="index.html">SLUŽBY</a></li>
+                <li><a class="momentalni_stranka" href="kontakt.html">KONTAKT</a></li>
             </ul>
         </nav>
         <!-- H. TEXT -->
@@ -53,16 +53,17 @@
         <section class="background">
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
-                <p>Výroba a instalace elektrických zařízení</p>
-                <p>Průmyslové elektroinstalace a elektromontáže</p>
-                <p>Opravy, montáže a servisní činnosti</p>
+                <h3>KONTAKT</h3>
+                <p>Neváhejte nás kontaktovat pro využití našich služeb</p>
+                <p>Požadavky na práci přijímáme 365 dní v roce bez výjimek</p>
+                <p>Práci si u nás domluvíte do sedmi dnů od podání požadavku</p>
             </div>
         </section>
         <section class="content-wrapper">
             <div class="card-long-flex-wrap">
                 <div class="card card-long">
                     <h2>Naše služby</h2>
-                    <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
+                    <p>Podívejte se na námi nabízené <a href="reference.html">služby</a></p>
                     <p><a href="reference.html">Reference</a> našich zákazníků</p>
                 </div>
             </div>
