--- a/reference.html
+++ b/reference.html
@@ -27,17 +27,17 @@
             <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="index.html">Domovská stránka</a>
-                <a class="momentalni_stranka_ham" href="reference.html">Reference</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="index.html">SLUŽBY</a>
+                <a class="momentalni_stranka_ham" href="reference.html">REFERENCE</a>
+                <a href="kontakt.html">KONTAKT</a>
             </div>
         </div>
         <!-- NAVBAR -->
         <nav class="navbar">
             <ul>
-                <li><a class="momentalni_stranka" href="reference.html">Reference</a></li>
-                <li><a href="index.html">DOMOVSKÁ STRÁNKA</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a class="momentalni_stranka" href="reference.html">REFERENCE</a></li>
+                <li><a href="index.html">SLUŽBY</a></li>
+                <li><a href="kontakt.html">KONTAKT</a></li>
             </ul>
         </nav>
         <!-- H. TEXT -->
@@ -53,17 +53,18 @@
         <section class="background">
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
-                <p>Výroba a instalace elektrických zařízení</p>
-                <p>Průmyslové elektroinstalace a elektromontáže</p>
-                <p>Opravy, montáže a servisní činnosti</p>
+                <h3>REFERENCE</h3>
+                <p>Zakládáme si na kvalitní práci pro naše zákazníky</p>
+                <p>Každá reference nám pomáhá posunout se dále a vylepšit naší práci</p>
+                <p>Jsme rádi za jakoukoliv zpětnou vazbu k naší práci</p>
             </div>
         </section>
         <section class="content-wrapper">
             <div class="card-long-flex-wrap">
                 <div class="card card-long">
                     <h2>Naše služby</h2>
+                    <p>Podívejte se na námi nabízené <a href="reference.html">služby</a></p>
                     <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
-                    <p><a href="reference.html">Reference</a> našich zákazníků</p>
                 </div>
             </div>
             <div class="card-flex-wrap">
