--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
             <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
             <div id="myDropdown" class="dropdown-content">
-                <a class="momentalni_stranka_ham" href="index.html">Domovská stránka</a>
-                <a href="reference.html">Reference</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a class="momentalni_stranka_ham" href="index.html">SLUŽBY</a>
+                <a href="reference.html">REFERENCE</a>
+                <a href="kontakt.html">KONTAKT</a>
             </div>
         </div>
         <!-- NAVBAR -->
         <nav class="navbar">
             <ul>
-                <li><a href="reference.html">Reference</a></li>
-                <li><a class="momentalni_stranka" href="index.html">DOMOVSKÁ STRÁNKA</a></li>
-                <li><a href="kontakt.html">Kontakt</a></li>
+                <li><a href="reference.html">REFERENCE</a></li>
+                <li><a class="momentalni_stranka" href="index.html">SLUŽBY</a></li>
+                <li><a href="kontakt.html">KONTAKT</a></li>
             </ul>
         </nav>
         <!-- H. TEXT -->
@@ -53,6 +53,7 @@
         <section class="background">
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
+                <h3>NAŠE SLUŽBY</h3>
                 <p>Výroba a instalace elektrických zařízení</p>
                 <p>Průmyslové elektroinstalace a elektromontáže</p>
                 <p>Opravy, montáže a servisní činnosti</p>
