--- a/index.html
+++ b/index.html
@@ -16,37 +16,38 @@
 </head>
 <body>
     <header>
-
-    <div class="header-flex-wrap">
-        <!-- HEADER LOGO -->
-        <a href="index.html">
-            <img class="header-logo" src="images/logo.png" alt="Logo stránky">
-        </a>
-        <!-- HAMBURGER -->
-        <div class="dropdown">
-            <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
-            </button>
-            <div id="myDropdown" class="dropdown-content">
-                <a class="momentalni_stranka_ham" href="index.html">SLUŽBY</a>
-                <a href="reference.html">REFERENCE</a>
-                <a href="kontakt.html">KONTAKT</a>
+        <div class="header-flex-wrap">
+<!-- HEADER LOGO -->
+            <div class="header-logo-wrap">
+                <a href="index.html">
+                    <img class="header-logo" src="images/logo.png" alt="Logo stránky">
+                </a>
+            </div>
+<!-- HAMBURGER -->
+            <div class="dropdown">
+                <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
+                </button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a class="momentalni_stranka_ham" href="index.html">SLUŽBY</a>
+                    <a href="reference.html">REFERENCE</a>
+                    <a href="kontakt.html">KONTAKT</a>
+                </div>
+            </div>
+<!-- NAVBAR -->
+            <nav class="navbar">
+                <ul>
+                    <li><a href="reference.html">REFERENCE</a></li>
+                    <li><a class="momentalni_stranka" href="index.html">SLUŽBY</a></li>
+                    <li><a href="kontakt.html">KONTAKT</a></li>
+                </ul>
+            </nav>
+<!-- H. TEXT -->
+            <div class="header-text-wrap">
+                <div class="header-text-logo">
+                    KÍLHETS
+                </div>
             </div>
         </div>
-        <!-- NAVBAR -->
-        <nav class="navbar">
-            <ul>
-                <li><a href="reference.html">REFERENCE</a></li>
-                <li><a class="momentalni_stranka" href="index.html">SLUŽBY</a></li>
-                <li><a href="kontakt.html">KONTAKT</a></li>
-            </ul>
-        </nav>
-        <!-- H. TEXT -->
-        <div class="header-text-outline">
-            <div class="header-text-logo">
-                KÍLHETS
-            </div>
-        </div>
-    </div>
     <div class="prouzek"></div>
     </header>
     <main>
@@ -61,7 +62,7 @@
         </section>
         <section class="content-wrapper">
             <div class="card-long-flex-wrap">
-                <div class="card card-long">
+                <div class="card card-long slu">
                     <h2>Naše služby</h2>
                     <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
                     <p><a href="reference.html">Reference</a> našich zákazníků</p>
