--- a/kontakt.html
+++ b/kontakt.html
@@ -16,13 +16,14 @@
 </head>
 <body>
     <header>
-
-    <div class="header-flex-wrap">
-        <!-- HEADER LOGO -->
-        <a href="index.html">
-            <img class="header-logo" src="images/logo.png" alt="Logo stránky">
-        </a>
-        <!-- HAMBURGER -->
+        <div class="header-flex-wrap">
+<!-- HEADER LOGO -->
+            <div class="header-logo-wrap">
+                <a href="index.html">
+                    <img class="header-logo" src="images/logo.png" alt="Logo stránky">
+                </a>
+            </div>
+<!-- HAMBURGER -->
         <div class="dropdown">
             <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
             </button>
@@ -32,7 +33,7 @@
                 <a class="momentalni_stranka_ham" href="kontakt.html">KONTAKT</a>
             </div>
         </div>
-        <!-- NAVBAR -->
+<!-- NAVBAR -->
         <nav class="navbar">
             <ul>
                 <li><a href="reference.html">REFERENCE</a></li>
@@ -40,8 +41,8 @@
                 <li><a class="momentalni_stranka" href="kontakt.html">KONTAKT</a></li>
             </ul>
         </nav>
-        <!-- H. TEXT -->
-        <div class="header-text-outline">
+<!-- H. TEXT -->
+        <div class="header-text-wrap">
             <div class="header-text-logo">
                 KÍLHETS
             </div>
