--- a/reference.html
+++ b/reference.html
@@ -74,7 +74,7 @@
                         <p>Vaše reference naší firmy</p>
                     </div>
                     <div class="card-long-inside-inputs">
-                        <textarea type="text" class="ref-input big-input" type="text"></textarea>
+                        <textarea class="ref-input big-input"></textarea>
                     </div>
                     <div class="card-long-inside-name">
                         <button class="ref-button"><a href="reference.html">ODESLAT</a></button>
