--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
         </section>
         <section class="content-wrapper">
-            <div class="card-long-flex-wrap">
+            <div class="flex-center">
                 <div class="card card-long slu">
                     <h2>Naše služby</h2>
                     <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
