--- a/kontakt.html
+++ b/kontakt.html
@@ -61,31 +61,50 @@
             </div>
         </section>
         <section class="content-wrapper">
-            <div class="card-long-flex-wrap">
-                <div class="card card-long">
-                    <h2>Naše služby</h2>
-                    <p>Podívejte se na námi nabízené <a href="reference.html">služby</a></p>
-                    <p><a href="reference.html">Reference</a> našich zákazníků</p>
+            <div class="flex-center">
+                <div class="card card-long kon">
+                    <h2>Kontaktní formulář</h2>
+                    <label>Jméno a příjmení</label>
+                    <div class="card-long-inside-inputs">
+                        <input class="ref-input" type="text" required>
+                    </div>
+                    <label>E-mail</label>
+                    <div class="card-long-inside-inputs">
+                        <input class="ref-input" type="text" placeholder="jannovak@seznam.cz">
+                    </div>
+                    <label>Zvolená služba</label>
+                    <div class="flex-center">
+                        <select>
+                            <option>Elektroinstalace</option>
+                            <option>Průmyslová elektromontáž</option>
+                            <option>Servis / revize</option>
+                        </select>
+                    </div>
+                    <label>Můj zájem o</label>
+                    <div class="flex-center">
+                        <input type="checkbox" id="1">
+                        <label for="1">Konzultaci</label>
+                        <input type="checkbox" id="2">
+                        <label for="2">Cenovou nabídku</label>
+                    </div>
+                    <label>Zpráva</label>
+                    <div class="card-long-inside-inputs">
+                        <textarea class="ref-input big-input"></textarea>
+                    </div>
+
+
+
+
+                    <div class="flex-center">
+                        <button class="ref-button"><a href="kontakt.html">ODESLAT</a></button>
+                    </div>
                 </div>
             </div>
-            <div class="card-flex-wrap">
-                <div class="card">
-                    <h3>Elektroinstalace zařízení</h3>
-                    <p>Zařídíme pro vás celou elektroinstalaci se vším všudy</p>
-                    <p>Přes výrobu, instalaci až revizi zařízení</p>
-                </div>
-                <div class="card">
-                    <h3>Průmyslová elektromontáž</h3>
-                    <p>Vytvoříme pro vás speciální plán celé elektromontáže</p>
-                    <p>Celou elektromontáž pro vás následně uděláme</p>
-                    <p>Provedeme i následnou revizi celé elektromontáže</p>
-                </div>
-                <div class="card">
-                    <h3>Servisní činnosti</h3>
-                    <p>Naši specialisté pro vás udělají revizi všech vašich zařízení</p>
-                    <p>Zařídíme případnou opravu nebo znovu montáž poškozenývch zařízení</p>
+            <div class="flex-center">
+                <div class="kontakt-card card">
                 </div>
             </div>
+            
         </section>
     </main>
     <footer>
