--- a/reference.html
+++ b/reference.html
@@ -61,26 +61,24 @@
             </div>
         </section>
         <section class="content-wrapper">
-            <div class="card-long-flex-wrap">
+            <div class="flex-center">
                 <div class="card card-long ref">
                     <h2>Zajímají nás vaše názory</h2>
-                    <div class="card-long-inside-name">
+                    <div class="flex-center">
                         <p>Vaše jméno</p>
                     </div>
                     <div class="card-long-inside-inputs">
                         <input class="ref-input" type="text">
                     </div>
-                    <div class="card-long-inside-name">
+                    <div class="flex-center">
                         <p>Vaše reference naší firmy</p>
                     </div>
                     <div class="card-long-inside-inputs">
                         <textarea class="ref-input big-input"></textarea>
                     </div>
-                    <div class="card-long-inside-name">
+                    <div class="flex-center">
                         <button class="ref-button"><a href="reference.html">ODESLAT</a></button>
                     </div>
-
-
                 </div>
             </div>
             <div class="card-flex-wrap">
