kontakt + zdroje COMPLETED, file cleanup

--- a/reference.html
+++ b/reference.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elektroinstalace KÍLHETS</title>
+    <title>KÍLHETS | REFERENCE</title>
     <link rel="icon" href="images/favicon.png" type = "image/x-icon">
 
     <script src="styles_js/hamburger.js"></script>
@@ -48,7 +48,9 @@
                 </div>
             </div>
         </div>
-    <div class="prouzek"></div>
+        <div class="prouzek">
+            <a class="zdroje" href="zdroje.html">ZDROJE</a>
+        </div>
     </header>
     <main>
         <section class="background">
@@ -101,8 +103,5 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
