--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elektroinstalace KÍLHETS</title>
+    <title>KÍLHETS | KONTAKT</title>
     <link rel="icon" href="images/favicon.png" type = "image/x-icon">
 
     <script src="styles_js/hamburger.js"></script>
@@ -48,7 +48,9 @@
             </div>
         </div>
     </div>
-    <div class="prouzek"></div>
+    <div class="prouzek">
+        <a class="zdroje" href="zdroje.html">ZDROJE</a>
+    </div>
     </header>
     <main>
         <section class="background">
@@ -93,22 +95,33 @@
                     </div>
                     <label>Zpráva</label>
                     <div class="card-long-inside-inputs">
-                        <textarea class="ref-input big-input kon-textarea"></textarea>
+                        <textarea class="kon-textarea ref-input big-input"></textarea>
                     </div>
-                    <div class="flex-center">
-                        <button class="ref-button kon-button"><a href="kontakt.html">ODESLAT</a></button>
+                    <div class="flex-center kon-button">
+                        <button class="ref-button "><a href="kontakt.html">ODESLAT</a></button>
                     </div>
                 </div>
             </div>
             <div class="flex-center">
                 <div class="kontakt-card card">
+                    <div class="text-kontakt">
+                        <h3>ELEKTROINSTALACE KÍLHETS</h3>
+                        <p><b>ADRESA: </b> Masarykova 3, Liberec</p>
+                        <p><b>PSČ: </b> 460 01 </p>
+                        <p><b>ZAVOLEJTE NÁM: </b> +420 603 011 871</p>
+                        <p><b>EMAIL: </b>kilhets.elektro@kilhets.cz</p>
+                        <br>
+                        <p><b>IČO: </b> 60302843</p>
+                        <p><b>DIČ: </b> 5201231423</p>
+
+                    </div>
+                    <div class="mapa-kontakt"> 
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2523.130107014963!2d15.062454715743149!3d50.77316167952117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470936a0b62f8e83%3A0x27e91649b311f9a0!2zU3TFmWVkbsOtIHByxa9teXNsb3bDoSDFoWtvbGEgc3Ryb2puw60gYSBlbGVrdHJvdGVjaG5pY2vDoSBhIFZ5xaHFocOtIG9kYm9ybsOhIMWha29sYQ!5e0!3m2!1scs!2scz!4v1654779370043!5m2!1scs!2scz" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
             </div>
             
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
