--- a/zdroje.html
+++ b/zdroje.html
@@ -28,7 +28,7 @@
                 <button class="fa fa-bars hamburger is-active" onclick="myFunction()">
                 </button>
                 <div id="myDropdown" class="dropdown-content">
-                    <a class="momentalni_stranka_ham" href="index.html">SLUŽBY</a>
+                    <a href="index.html">SLUŽBY</a>
                     <a href="reference.html">REFERENCE</a>
                     <a href="kontakt.html">KONTAKT</a>
                 </div>
@@ -37,7 +37,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="reference.html">REFERENCE</a></li>
-                    <li><a class="momentalni_stranka" href="index.html">SLUŽBY</a></li>
+                    <li><a href="index.html">SLUŽBY</a></li>
                     <li><a href="kontakt.html">KONTAKT</a></li>
                 </ul>
             </nav>
@@ -56,41 +56,21 @@
     <main>
         <section class="background">
             <div class="main-border-wrap">
-                <h1>ELEKTROINSTALACE KÍLHETS</h1>
-                <h3>NAŠE SLUŽBY</h3>
-                <p>Výroba a instalace elektrických zařízení</p>
-                <p>Průmyslové elektroinstalace a elektromontáže</p>
-                <p>Opravy, montáže a servisní činnosti</p>
-            </div>
+                <h2>ZDROJE</h2>
+                <ul class="zdroje-seznam">
+                    <li><a href="https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown">Javascript a kód použitý na hamburger menu</a></li>
+                    <li><a href="https://flyclipart.com/lightning-lightning-icon-with-png-and-vector-format-for-free-lightning-icon-png-928205
+                        ">Favicona</a></li>
+                    <li><a href="https://www.inversor.cz/elektroinstalace">Background_foto</a></li>
+                    <li><a href="https://www.elsol.cz/">Logo</a></li>
+                    <li>--- Všechny obrázky na stránce byly následně trochu upraveny mnou ---</li>
+                    <div class="zdroje-texty">
+                        <li>Zdroje textů na stránce</li>
+                        <li><a href="https://www.enkidoo.cz/">1.</a></li>
+                        <li><a href="https://www.inversor.cz/elektroinstalace">2.</a></li>
+                        <li>Stránka spolužáka Matěje Hrabala</li>
+                    </div>
+                </ul>
         </section>
-        <section class="content-wrapper">
-            <div class="flex-center">
-                <div class="card card-long slu">
-                    <h2>Naše služby</h2>
-                    <p>Neváhejte a <a href="kontakt.html">kontaktujte</a> nás</p>
-                    <p><a href="reference.html">Reference</a> našich zákazníků</p>
-                </div>
-            </div>
-            <div class="card-flex-wrap">
-                <div class="card">
-                    <h3>Elektroinstalace zařízení</h3>
-                    <p>Zařídíme pro vás celou elektroinstalaci se vším všudy</p>
-                    <p>Přes výrobu, instalaci až revizi zařízení</p>
-                </div>
-                <div class="card">
-                    <h3>Průmyslová elektromontáž</h3>
-                    <p>Vytvoříme pro vás speciální plán celé elektromontáže</p>
-                    <p>Celou elektromontáž pro vás následně uděláme</p>
-                    <p>Provedeme i následnou revizi celé elektromontáže</p>
-                </div>
-                <div class="card">
-                    <h3>Servisní činnosti</h3>
-                    <p>Naši specialisté pro vás udělají revizi všech vašich zařízení</p>
-                    <p>Zařídíme případnou opravu nebo znovu montáž poškozenývch zařízení</p>
-                </div>
-                
-            </div>
-        </section>
-    </main>
 </body>
 </html>
