--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     </header>
     <main>
-        <section class="background">
+        <article class="parallax">
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
                 <h3>NAŠE SLUŽBY</h3>
@@ -62,7 +62,7 @@
                 <p>Průmyslové elektroinstalace a elektromontáže</p>
                 <p>Opravy, montáže a servisní činnosti</p>
             </div>
-        </section>
+        </article>
         <section class="content-wrapper">
             <div class="flex-center">
                 <div class="card card-long slu">
