--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
     </div>
     </header>
     <main>
-        <section class="background">
+        <article class="parallax">>
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
                 <h3>KONTAKT</h3>
@@ -61,7 +61,7 @@
                 <p>Požadavky na práci přijímáme 365 dní v roce bez výjimek</p>
                 <p>Práci si u nás domluvíte do sedmi dnů od podání požadavku</p>
             </div>
-        </section>
+        </article>
         <section class="content-wrapper">
             <div class="flex-center">
                 <div class="card card-long kon">
@@ -116,7 +116,7 @@
 
                     </div>
                     <div class="mapa-kontakt"> 
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2523.130107014963!2d15.062454715743149!3d50.77316167952117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470936a0b62f8e83%3A0x27e91649b311f9a0!2zU3TFmWVkbsOtIHByxa9teXNsb3bDoSDFoWtvbGEgc3Ryb2puw60gYSBlbGVrdHJvdGVjaG5pY2vDoSBhIFZ5xaHFocOtIG9kYm9ybsOhIMWha29sYQ!5e0!3m2!1scs!2scz!4v1654779370043!5m2!1scs!2scz" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2523.130107014963!2d15.062454715743149!3d50.77316167952117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470936a0b62f8e83%3A0x27e91649b311f9a0!2zU3TFmWVkbsOtIHByxa9teXNsb3bDoSDFoWtvbGEgc3Ryb2puw60gYSBlbGVrdHJvdGVjaG5pY2vDoSBhIFZ5xaHFocOtIG9kYm9ybsOhIMWha29sYQ!5e0!3m2!1scs!2scz!4v1654779370043!5m2!1scs!2scz" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
