--- a/reference.html
+++ b/reference.html
@@ -53,7 +53,7 @@
         </div>
     </header>
     <main>
-        <section class="background">
+        <article class="parallax">>
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
                 <h3>REFERENCE</h3>
@@ -61,7 +61,7 @@
                 <p>Každá reference nám pomáhá posunout se dále a vylepšit naší práci</p>
                 <p>Jsme rádi za jakoukoliv zpětnou vazbu k naší práci</p>
             </div>
-        </section>
+        </article>
         <section class="content-wrapper">
             <div class="flex-center">
                 <div class="card card-long ref">
