--- a/zdroje.html
+++ b/zdroje.html
@@ -54,7 +54,7 @@
     </div>
     </header>
     <main>
-        <section class="background">
+        <article class="parallax">
             <div class="main-border-wrap">
                 <h2>ZDROJE</h2>
                 <ul class="zdroje-seznam">
@@ -64,13 +64,15 @@
                     <li><a href="https://www.inversor.cz/elektroinstalace">Background_foto</a></li>
                     <li><a href="https://www.elsol.cz/">Logo</a></li>
                     <li>--- Všechny obrázky na stránce byly následně trochu upraveny mnou ---</li>
-                    <div class="zdroje-texty">
-                        <li>Zdroje textů na stránce</li>
-                        <li><a href="https://www.enkidoo.cz/">1.</a></li>
-                        <li><a href="https://www.inversor.cz/elektroinstalace">2.</a></li>
-                        <li>Stránka spolužáka Matěje Hrabala</li>
-                    </div>
                 </ul>
-        </section>
+                <ul class="zdroje-seznam zdroje-texty">
+                    <li>Zdroje textů na stránce</li>
+                    <li><a href="https://www.enkidoo.cz/">1.</a></li>
+                    <li><a href="https://www.inversor.cz/elektroinstalace">2.</a></li>
+                    <li>Stránka spolužáka Matěje Hrabala</li>
+                </ul>                
+            </div>
+        </article>
+    </main>
 </body>
 </html>
