--- a/kontakt.html
+++ b/kontakt.html
@@ -53,7 +53,7 @@
     </div>
     </header>
     <main>
-        <article class="parallax">>
+        <article class="parallax">
             <div class="main-border-wrap">
                 <h1>ELEKTROINSTALACE KÍLHETS</h1>
                 <h3>KONTAKT</h3>
